--- a/views/my-orders.ejs
+++ b/views/my-orders.ejs
@@ -185,5 +185,8 @@
 
       document.addEventListener("DOMContentLoaded", loadUserOrders);
     </script>
+    
+    <!-- Enhanced logout script -->
+    <script src="js/logout-fix.js"></script>
   </body>
 </html>
