--- a/views/feedback.ejs
+++ b/views/feedback.ejs
@@ -19,7 +19,7 @@
         <% if (user && user.isAdmin) { %>
           <!-- Admin user: only show admin dashboard and logout -->
           <a href="/admin" style="color: #ff6b6b; font-weight: bold;">Admin Dashboard</a>
-          <a href="api/users/signout">Log Out</a>
+          <a href="/api/users/signout">Log Out</a>
         <% } else if (name) { %>
           <!-- Regular logged-in user: show normal navigation -->
           <a href="/">home</a>
@@ -28,7 +28,7 @@
           <a href="feedback" style="color: var(--main-color)">feedback</a>
           <a href="/#contact">contact</a>
           <a href="/my-orders">My Orders</a>
-          <a href="api/users/signout">Log Out</a>
+          <a href="/api/users/signout">Log Out</a>
         <% } else { %>
           <!-- Not logged in: show public navigation -->
           <a href="/">home</a>
@@ -697,5 +697,8 @@
         }
       }
     </script>
+    
+    <!-- Enhanced logout script -->
+    <script src="js/logout-fix.js"></script>
   </body>
 </html>
