--- a/views/index.ejs
+++ b/views/index.ejs
@@ -23,7 +23,7 @@
       <% if (user && user.isAdmin) { %>
         <!-- Admin user: only show admin dashboard and logout -->
         <a href="/admin" style="color: #ff6b6b; font-weight: bold;">Admin Dashboard</a>
-        <a href="api/users/signout">Log Out</a>
+        <a href="/api/users/signout">Log Out</a>
       <% } else if (name) { %>
         <!-- Regular logged-in user: show normal navigation -->
         <a href="#">home</a>
@@ -32,7 +32,7 @@
         <a href="feedback">feedback</a>
         <a href="#contact">contact</a>
         <a href="/my-orders">My Orders</a>
-        <a href="api/users/signout">Log Out</a>
+        <a href="/api/users/signout">Log Out</a>
       <% } else { %>
         <!-- Not logged in: show public navigation -->
         <a href="#">home</a>
@@ -293,6 +293,7 @@
  
 
 <script src="js/index.js"></script>
+<script src="js/logout-fix.js"></script>
 <!-- <script src="js/convo.js"></script> -->
 </body>
 </html>
