--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -27,7 +27,7 @@
         <% if (user && user.isAdmin) { %>
           <!-- Admin user: only show admin dashboard and logout -->
           <a href="/admin" style="color: #ff6b6b; font-weight: bold;">Admin Dashboard</a>
-          <a href="api/users/signout">Log Out</a>
+          <a href="/api/users/signout">Log Out</a>
         <% } else if (name) { %>
           <!-- Regular logged-in user: show normal navigation -->
           <a href="/">home</a>
@@ -36,7 +36,7 @@
           <a href="feedback">feedback</a>
           <a href="/#contact">contact</a>
           <a href="/my-orders">My Orders</a>
-          <a href="api/users/signout">Log Out</a>
+          <a href="/api/users/signout">Log Out</a>
         <% } else { %>
           <!-- Not logged in: show public navigation -->
           <a href="/">home</a>
@@ -219,5 +219,8 @@
       </div>
       <div class="credit">created by <span>Chahat</span>| all rights reserved</div>
     </section>
+    
+    <!-- Enhanced logout script -->
+    <script src="js/logout-fix.js"></script>
   </body>
 </html>
