--- a/views/index.ejs
+++ b/views/index.ejs
@@ -277,7 +277,7 @@
 </div>
 
 <!-- FontAwesome + jQuery -->
-<script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+<!-- <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script> -->
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
 <!-- JS -->
