--- a/views/feedback.ejs
+++ b/views/feedback.ejs
@@ -699,6 +699,8 @@
     </script>
     
     <!-- Enhanced logout script -->
-    <script src="js/logout-fix.js"></script>
+<% if (user || name) { %>
+<script src="js/logout-fix.js"></script>
+<% } %>
   </body>
 </html>
