--- a/views/index.ejs
+++ b/views/index.ejs
@@ -293,7 +293,9 @@
  
 
 <script src="js/index.js"></script>
+<% if (user || name) { %>
 <script src="js/logout-fix.js"></script>
+<% } %>
 <!-- <script src="js/convo.js"></script> -->
 </body>
 </html>
